# trueflow

./: .gitignore  AGENTS.md  DESIGN.org  Justfile  LICENSE  README.md  TODO.org  flake.nix  rust-toolchain.toml  trueflow.example.toml  trueflow.toml
assessments/: 2026-01-24.md
design/: website.md
designs/: jj_integration.org  ui.md
trueflow/: Cargo.toml  TODO.org  commits.md  review_record.schema.json
trueflow/example_repos/all_languages/: main.el  main.js  main.just  main.md  main.nix  main.py  main.rs  main.sh  main.toml  main.ts  main.txt
trueflow/example_repos/basic_changes/src/: main.rs
trueflow/example_repos/complex_blocks/src/: lib.rs
trueflow/example_repos/complex_blocks_js/src/: lib.js
trueflow/example_repos/complex_blocks_md/: README.md
trueflow/example_repos/complex_blocks_py/src/: lib.py
trueflow/example_repos/complex_blocks_ts/src/: lib.ts
trueflow/plans/: subblock_splitting.md
trueflow/src/: analysis.rs  block.rs  block_splitter.rs  cli.rs  complexity.rs  config.rs  context.rs  diff_logic.rs  finder.rs  hashing.rs  lib.rs  logging.rs  main.rs  optimizer.rs  policy.rs  scanner.rs  store.rs  sub_splitter.rs  text_split.rs  tree.rs  vcs.rs
trueflow/src/commands/: check.rs  diff.rs  feedback.rs  inspect.rs  mark.rs  mod.rs  review.rs  scan.rs  sync.rs  tui.rs  verify.rs
trueflow/tests/: bug_regressions.rs  e2e_diff.rs  e2e_inspect.rs  e2e_languages.rs  e2e_mark_store_coverage.rs  e2e_markdown.rs  e2e_store.rs  e2e_suite.rs  e2e_sync.rs  e2e_verify.rs  edge_cases.rs  mark_quiet.rs  schema.rs  sub_block_coverage.rs  sub_block_semantics.rs  tree_parent_blocks.rs  tui_wiring.rs  vcs_scope.rs
trueflow/tests/common/: mod.rs
trueflow/tests/fixtures/: diff_new_content_initial.rs  diff_new_content_updated.rs  diff_rename_new.rs
vet/: Cargo.toml
vet.el/: vet.el  (+2 more)
vet/src/: diff_logic.rs  main.rs
vet/src/commands/: mark.rs  mod.rs
vet/tests/: e2e_sync.rs
vibecheck/: Cargo.toml  TODO.org
vibecheck/src/: hashing.rs  main.rs  store.rs
vibecheck/src/commands/: check.rs  diff.rs  sync.rs
vibecheck/tests/: e2e_diff.rs
(+6 files in other folders)
