[package]
name = "vibecheck"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "=4.4.18", features = ["derive"] }
dirs = "6.0.0"
git2 = { version = "0.18", features = ["vendored-openssl"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
url = "=2.4.1"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0"

